@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-07-02T01:25:00Z",
-  "count_outdated" : 1496,
-  "uniques_outdated" : 1016,
+  "timestamp" : "2025-07-03T01:25:01Z",
+  "count_outdated" : 1497,
+  "uniques_outdated" : 1017,
   "count" : 1509,
   "uniques" : 1029,
   "clones" : [
-    {
-      "timestamp": "2025-06-19T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-06-20T00:00:00Z",
       "count": 1,
