@@ -1,3 +1,12 @@
+2025-07-03T01:25:01Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16039399321 # 693
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-03
+* notice: last 14d: unq all: 4 12
+* notice: prev accum: outdated-unq outdated-all / unq all: 1016 1496 / 1029 1509
+* notice: next accum: outdated-unq outdated-all / unq all: 1017 1497 / 1029 1509
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2025-06-19] / []
+
 2025-07-02T01:25:00Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16013877873 # 692
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-02
